# LabelDicom_cpp

./: .gitignore  .gitmodules  CMakeLists.txt
res/qdarkstyle/: style.qrc  style.qss
src/: AppMain.cpp  AppMain.h  CMakeLists.txt  CameraZoomAndMoveTools.cpp  CameraZoomAndMoveTools.h  CodingHelper.cpp  CodingHelper.h  CoordHelper.cpp  CoordHelper.h  Dispatcher.cpp  Dispatcher.h  GlobalVal.cpp  GlobalVal.h  Header.h  Helper.cpp  Helper.h  Interface.h  JsonHelper.h  LandMarkActor.cpp  LandMarkActor.h  LandMarkTools.cpp  LandMarkTools.h  LoadMgr.cpp  LoadMgr.h  NThreadPool.cpp  NThreadPool.h  ResliceDelegate.cpp  ResliceDelegate.h  SliceCutterActor.cpp  SliceCutterActor.h  Structs.h  Table.h  Types.h  main.cpp  valsalva_class.cpp  valsalva_class.h
src/gui/: FrameComponent.cpp  FrameComponent.h  FrameComponent.ui  LabelDetailView.cpp  LabelDetailView.h  LabelDetailView.ui  LabelEditorDialog.cpp  LabelEditorDialog.h  LabelEditorDialog.ui  LabelListComponent.cpp  LabelListComponent.h  LabelSelectDialog.cpp  LabelSelectDialog.h  LableListComponent.ui  LandMarkListComponent.cpp  LandMarkListComponent.h  LandMarkListComponent.ui  LoadDroppedFileDialog.cpp  LoadDroppedFileDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MprComponent.cpp  MprComponent.h  MprComponent.ui  OpenFileDialog.cpp  OpenFileDialog.h  OpenFileDialog.ui  RandomSlice.cpp  RandomSlice.h  RandomSlice.ui  SliceComponent.cpp  SliceComponent.h  SliceComponent.ui  SliceView.cpp  SliceView.h  SliceView.ui  VolumeComponent.cpp  VolumeComponent.h  VolumeComponent.ui
src/model/: BoundingBox3DLabelModel.cpp  BoundingBox3DLabelModel.h  BoundingBoxLabelModel.cpp  BoundingBoxLabelModel.h  ColorLabelTableModel.cpp  ColorLabelTableModel.h  FrameLabelModel.cpp  FrameLabelModel.h  LabelDetailModel.cpp  LabelDetailModel.h  LandMarkListModel.cpp  LandMarkListModel.h  MaskDataModel.cpp  MaskDataModel.h  MaskEditRecordModel.cpp  MaskEditRecordModel.h  MeshModel.cpp  MeshModel.h  ModelBase.cpp  ModelBase.h  ModelManager.cpp  ModelManager.h  MprPositionModel.cpp  MprPositionModel.h
src/renderer/: Behavior.cpp  Behavior.h  BoundingBox3DActor.cpp  BoundingBox3DActor.h  BoundingBoxActor.cpp  BoundingBoxActor.h  BoxWidgetActor.cpp  BoxWidgetActor.h  CubeActor.cpp  CubeActor.h  HandleWidgetActor.cpp  HandleWidgetActor.h  LineActor.cpp  LineActor.h  LocationActor.cpp  LocationActor.h  LocationActor3D.cpp  LocationActor3D.h  MathHelper.cpp  MathHelper.h  MeshActor.cpp  MeshActor.h  NCommand.cpp  NCommand.h  NSliceInteractorStyle.cpp  NSliceInteractorStyle.h  NWindowInteractor.cpp  NWindowInteractor.h  PointActor.cpp  PointActor.h  PolygonActor.cpp  PolygonActor.h  RectangleActor.cpp  RectangleActor.h  RenderEngine.cpp  RenderEngine.h  ResliceActor.cpp  ResliceActor.h  RotateLineWidgetActor.cpp  RotateLineWidgetActor.h  (+13 more)
src/tools/: BaseMprTools.cpp  BaseMprTools.h  BaseSliceTools.cpp  BaseSliceTools.h  BoundingBox3DTools.cpp  BoundingBox3DTools.h  BoundingBoxTools.cpp  BoundingBoxTools.h  LocationTools.cpp  LocationTools.h  PolygonTools.cpp  PolygonTools.h  RandomSliceBoxTools.cpp  RandomSliceBoxTools.h  WinLevelWidthTools.cpp  WinLevelWidthTools.h
src/vtkwidget/: ActorBase.cpp  ActorBase.h
tools/decrypt/: CMakeLists.txt  main.cpp
tools/encrypt/: CMakeLists.txt  main.cpp
